z-index fix test

--- a/public/index.css
+++ b/public/index.css
@@ -72,3 +72,7 @@ img {
 .row-box {
     min-width: 180px;
 }
+
+.modal {
+    z-index: 9999;
+}
